Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-27835

innochecksum -S crashes for encrypted .ibd tablespace

    XMLWordPrintable

Details

    Description

      We need a way to get summary of pages by type for the encrypted .ibd file.

      Now we get a crash like this when trying to gte this information for encrypted .ibd file with 10.2.27, for example:

       
      # gdb --args /path/bin/innochecksum -S t.ibd
      GNU gdb (GDB) Red Hat Enterprise Linux 7.6.1-120.el7
      Copyright (C) 2013 Free Software Foundation, Inc.
      License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
      This is free software: you are free to change and redistribute it.
      There is NO WARRANTY, to the extent permitted by law. Type "show copying"
      and "show warranty" for details.
      This GDB was configured as "x86_64-redhat-linux-gnu".
      For bug reporting instructions, please see:
      <http://www.gnu.org/software/gdb/bugs/>...
      Reading symbols from /path/bin/innochecksum...done.
      (gdb) r
      Starting program: /path/bin/innochecksum -S t.ibd
      [Thread debugging using libthread_db enabled]
      Using host libthread_db library "/lib64/libthread_db.so.1".
       
      Program received signal SIGSEGV, Segmentation fault.
      0x00007f4a7aebc28b in __fprintf_chk () from /lib64/libc.so.6
      Missing separate debuginfos, use: debuginfo-install ...
      (gdb) bt
      #0 0x00007f4a7aebc28b in __fprintf_chk () from /lib64/libc.so.6
      #1 0x00005599d7a2fbcb in fprintf (__fmt=0x5599d7a77998 "#::%llu\t\t|\t\tEncrypted Index page\t\t\t|\tkey_version %u,%s\n", __stream=0x0) at /usr/include/bits/stdio2.h:99
      #2 parse_page (page=page@entry=0x5599d82f0000 "\273\066\314", <incomplete sequence \303>, xdes=xdes@entry=0x7f4a7bfa0000 "\253V\306e", file=file@entry=0x0, page_size=...,
      is_encrypted=is_encrypted@entry=true) at /home/buildbot/buildbot/build/extra/innochecksum.cc:944
      #3 0x00005599d7a2d28c in main (argc=1, argv=0x7ffceb958640) at /home/buildbot/buildbot/build/extra/innochecksum.cc:2018
      (gdb) 
      

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              valerii Valerii Kravchuk
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.25h
                  3.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.